[tool.poetry]
name = "votm"
version = "1.4.2"
description = "A full-featured Voting Manager - desktop app for school use"
authors = ["Sagar <57829219+nozwock@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/nozwock/votm"
homepage = "https://github.com/nozwock/votm"
documentation = "https://github.com/nozwock/votm"

[tool.poetry.dependencies]
python = "^3.7.3"
tabulate = "^0.8.9"
XlsxWriter = "^3.0.2"
appdirs = "^1.4.4"
Pillow = "^9.0.1"
toml = "^0.10.2"
ttkthemes = "^3.2.2"
pywin32 = {version = "^301", platform = "windows"}
pywin32-ctypes = {version = "^0.2.0", platform = "windows"}
typed-ast = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pyinstaller = "^4.0"

[tool.poetry.scripts]
votm-manage = 'votm.manage:main'
votm-vote = 'votm.vote:main'

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
